test/fail_compilation/fail138.d
// PERMUTE_ARGS: -d -dw

typedef int T = void;

void main(){
   T x = void;
   x = x.init;
}

